nicolium: fix slider thumb z-index

--- a/packages/nicolium/src/styles/new/components.scss
+++ b/packages/nicolium/src/styles/new/components.scss
@@ -1548,7 +1548,7 @@ div[data-viewport-type='window']:has(.⁂-empty-message) {
 
   &__thumb {
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     top: 50%;
     transform: translateY(-50%);
 
@@ -1622,7 +1622,7 @@ div[data-viewport-type='window']:has(.⁂-empty-message) {
 
   &__thumb {
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     top: 50%;
     transform: translateY(-50%);
 
